<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/heading_container"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/default_window_background">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orderListHeader"
        style="@style/Woo.ListHeader"
        android:importantForAccessibility="no"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:text="@string/this_week" />

</FrameLayout>
