<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Woo.Card.WithoutPadding"
    android:layout_margin="@dimen/minor_00">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/orderListLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shimmer_auto_start="true"
            app:shimmer_clip_to_children="true"
            app:shimmer_duration="2000"
            app:shimmer_repeat_delay="400">

            <include layout="@layout/skeleton_order_list_item"/>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <View
            style="@style/Woo.Divider"
            android:id="@+id/divider"
            android:layout_marginStart="@dimen/major_100"
            android:layout_width="match_parent"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
